# NFS

./: CMakeLists.txt  README.md  readme.md
include/nlfitter/core/: dataset.hpp  model.hpp  results.hpp  type.hpp
include/nlfitter/jacobian/: autodiff.hpp  numerical_diff.hpp
src/core/: dataset.cpp  model.cpp
